--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Welcome to Jekyll!
-#
+#jekyll nd
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
@@ -19,9 +19,21 @@ email: creiss@virginia.edu
 baseurl: "/~cr4bd/3130/S2023" # the subpath of your site, e.g. /blog
 url: "https://www.cs.virginia.edu" # the base hostname & protocol for your site, e.g. http://example.com
 
+plugins:
+  - jekyll-pandoc
 
 # Build settings
-markdown: kramdown
+markdown: Pandoc
+pandoc:
+  format: html5
+  extensions:
+    from: markdown+smart+inline_code_attributes
+
+kramdown:
+  input: Kramdown
+  parse_block_html: true
+
+
 theme: minima
 exclude:
   - Gemfile
