--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ defaults:
     scope:
       path: ""
     values:
+      layout: default
       author: Luther Tychnoviech and Charles Reiss
       license: <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /> CC-BY-NC-SA 4.0</a>
   - 
