More fixups for better use pandoc to generat files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,42 @@
 vendor
 Gemfile.lock
 .bundle
-*.html
-readings/*.html
+accounts.html
+coa_ethics.html
+index.html
+policies.html
+ssh.html
+labhw/lab01-make.html
+labhw/lab02-accounts.html
+labhw/lab03-signals.html
+labhw/lab04-network.html
+labhw/lab05-signatures.html
+labhw/lab05-signatures-ta.html
+labhw/lab06-memoize.html
+labhw/lab07-code-review.html
+labhw/lab08-sync.html
+labhw/lab09-dp.html
+labhw/lab10-openmp.html
+labhw/lab11-templates.html
+labhw/lab12-pipeline.html
+labhw/pa01-warmup.html
+labhw/pa02-pagetable.html
+labhw/pa03-pagetable2.html
+labhw/pa04-tlb.html
+labhw/pa06-fork.html
+labhw/pa07-life.html
+labhw/pa08-pipeline.html
+readings/bus.html
+readings/cache.html
+readings/consistency.html
+readings/deadlock.html
+readings/exams.html
+readings/intro.html
+readings/kernel.html
+readings/make.html
+readings/processors.html
+readings/protocols.html
+readings/pthreads.html
+readings/sec.html
+readings/sync.html
+readings/thread.html
