--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -37,33 +37,23 @@
   tentative: true
   due: 2023-02-15
 
-- name: signatures
-  lab: true
-  page: labhw/signatures.html
-  tentative: true
-  due: 2023-02-22
-
 - name: pagetable 1
   comment: no introducing lab
   page: labhw/pagetable1.html
   comment: instructions should be modified to specify what Makefile should build
   comment: needs rewrite to have compact your task part
   comment: this is done pagetable 2, but...
+  comment: bitfiddling reference update
+  comment: size_t --> intptr_t
   tentative: true
-  due: 2023-02-22
-
-- name: memoize
-  lab: true
-  page: labhw/memoize.html
-  tentative: true
-  due: 2023-03-01
+  due: 2023-02-15
 
 - name: code reviews
   lab: true
   page: labhw/code-review.html
   tentative: true
   comments: needs submission site link correction
-  due: 2023-03-15
+  due: 2023-02-22
 
 - name: pagetable 2
   comment: no introducing lab
@@ -73,7 +63,25 @@
   comment: requires arbitrary multiple submission
   page: labhw/pagetable2.html
   tentative: true
+  due: 2023-03-01
+
+- name: TBA secure channels lab
+  lab: true
+  removed_page: labhw/signatures.html
+  tentative: true
+  due: 2023-03-01
+
+
+- name: memoize
+  lab: true
+  page: labhw/memoize.html
+  tentative: true
   due: 2023-03-15
+
+- name: TBA caching HW
+  lab: true
+  tentative: true
+  due: 2023-03-22
 
 - name: sync games
   lab: true
