--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -80,6 +80,7 @@
 - name: TBA secure channels lab
   lab: true
   removed_page: labhw/signatures.html
+  page: labhw/secure-channel.html
   tentative: true
   due: 2023-03-01
 
