--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -7,6 +7,8 @@
   week: 1
   title: introduction / building (pt 1)
   reading: "[overview](readings/intro.html), [makefiles](readings/make.html)"
+  slides: yes
+  slides_prelim: yes
   description: |
     * course outline
 
