--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -390,3 +390,8 @@
 - date: 2023-05-02
   week: 16
 
+- date: 2023-05-12
+  week: 17
+  title: Final Exam
+  description: |
+    9am-12pm. Location TBA.
