allow more C file names for signals lab

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -9,7 +9,7 @@
   lab: true
   page: labhw/signals.html
   due: 2023-02-01
-  submit_file: signals.c
+  submit_file: "*.c"
   tentative: true
 
 - name: warmup
